--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ charset-normalizer=3.1.0=pyhd8ed1ab_0
 click=8.1.3=unix_pyhd8ed1ab_2
 colorama=0.4.6=pyhd8ed1ab_0
 contourpy=1.0.5=py310hdb19cb5_0
-cryptography=37.0.2=py310h597c629_0
+cryptography>=41.0.0
 cudatoolkit=11.6.0=hecad31d_10
 cycler=0.11.0=pyhd8ed1ab_0
 dbus=1.13.18=hb2f20db_0
